--- a/index.html
+++ b/index.html
@@ -11,6 +11,126 @@
 
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col col-xs-2">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-5">
+                <div class="box">5 col</div>
+            </div>
+            <div class="col col-xs-5">
+                <div class="box">5 col</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col col-xs-12">
+                <div class="box">12 col</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col col-xs-8">
+                <div class="box">8 col</div>
+            </div>
+            <div class="col col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+            <div class="col col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col col-xs-2">
+                <div class="box">2 col</div>
+            </div>
+            <div class="col col-xs-6">
+                <div class="box">6 col</div>
+            </div>
+            <div class="col col-xs-1">
+                <div class="box">1 col</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col col-xs-6">
+                <div class="box">
+                    <div class="col col-xs-2">
+                        <div class="inner-box">Nested 2 col</div>
+                    </div>
+                    <div class="col col-xs-2">
+                        <div class="inner-box">Nested 2 col</div>
+                    </div>
+                    <div class="col col-xs-8">
+                        <div class="inner-box">Nested 8 col</div>
+                    </div>
+                </div>
+            </div>
+                
+            <div class="col col-xs-6">
+                <div class="box">
+                    <div class="col-xs-6">
+                        <div class="inner-box">Nested 6 col</div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="inner-box">Nested 6 col</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
     
+    <div class="container-fluid">
+
+    </div>
 </body>
 </html>
