offsets block added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 </head>
 <body>
+
+    <!-- first block -->
+
     <div class="container-fluid">
+
         <div class="row">
             <div class="col col-xs-1">
                 <div class="box">1 col</div>
@@ -129,6 +133,8 @@
 
     <br>
 
+    <!-- second block -->
+
     <div class="container-fluid">
 
         <div class="row">
@@ -190,7 +196,68 @@
                 <div class="box"></div>
             </div>
         </div>
+    </div>
 
+    <br>
+
+    <!-- third block -->
+    <h1>Offset</h1>
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="offset-xs-11"></div>
+            <div class="col-xs-1">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-xs-10"></div>
+            <div class="col-xs-2">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-xs-9"></div>
+            <div class="col-xs-3">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-xs-8"></div>
+            <div class="col-xs-4">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-xs-7"></div>
+            <div class="col-xs-5">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-xs-6"></div>
+            <div class="col-xs-6">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-xs-5"></div>
+            <div class="col-xs-7">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-xs-4"></div>
+            <div class="col-xs-8">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-xs-3"></div>
+            <div class="col-xs-9">
+                <div class="box"></div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
